--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,9 @@
 :root {
-    --primaryColor:#1F2E4D;
-}
-
-.App {
-  text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    --primaryColor: #222222;
+    --primary: #11998e;
+    --secondary: #38ef7d;
+    --white: #fff;
+    --gray: #9b9b9b;
 }
 
 .App-header {
@@ -17,46 +11,160 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    text-align: center;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-  }
+}
 
-  .Splash {
-    width:100%;
-  }
+.Splash {
+    width: 20em;
+}
 
-  .App-link {
-    color: #61dafb;
-  }
+@media only screen and (min-aspect-ratio: 1/1) {
+    .App-header {
+        background-color: var(--primaryColor);
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        font-size: calc(10px + 2vmin);
+        color: white;
+    }
+    .Splash {
+        width: 20em;
+    }
+}
 
-@media only screen and (min-width: 768px){
-  .App-header {
-    background-color: var(--primaryColor);
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.selector {
+/*    background: #11998e;
+    color: white;*/
+    border-radius: 10px;
+    padding: 0 10px 0;
+    font-size: 1rem;
+    font-weight: 400;
+    border: 0;
+    width: 60%;
+    height: 3rem;
+    margin-top: 1rem;
+    margin-right: 1px;
+    margin-left: 1px;
+    text-align: center;
+    align-content: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
+}
+
+.bright_button {
+    background: var(--primary);
     color: white;
-  }
+    border-radius: 15px;
+    padding: 0 10px 0;
+    font-size: 1rem;
+    font-weight: 400;
+    border: 0;
+    width: 40%;
+    height: 3rem;
+    margin-top: 1rem;
+    margin-right: 1px;
+    margin-left: 1px;
+    text-align: center;
+    align-content: center;
+    justify-content: center;
+}
 
-  .Splash {
-    width:30%;
-  }
+.circular {
+    background: var(--primary);
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    border: 0;
+    text-align: center;
+    align-content: center;
+    justify-content: center
+}
 
-  .App-link {
-    color: #61dafb;
-  }
+.large_label {
+    font-size: 1.2rem;
+}
 
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
+.form__group {
+    display: inline-block;
+    justify-content: center;
+    width: 75%;
+    padding-bottom: 10px;
+}
+
+.form__field {
+    font-family: inherit;
+    width: 100%;
+    text-align: center;
+    border: 0;
+    border-bottom: 3px solid var(--gray);
+    outline: 0;
+    font-size: 1.3rem;
+    color: var(--white);
+    padding: 7px 0;
+    background: transparent;
+    transition: border-color 0.2s;
+    &::placeholder {
+        color: transparent;
     }
-    to {
-      transform: rotate(360deg);
+    &:placeholder-shown~.form__label {
+        font-size: 1.3rem;
+        cursor: text;
+        top: 20px;
+        padding-bottom: 6px;
+        font-weight: 700;
     }
-  }
+}
+
+.form__label {
+    position: absolute;
+    top: 0;
+    display: block;
+    transition: 0.2s;
+    font-size: 1rem;
+    color: var(--gray);
+}
+
+.form__field:valid {
+    ~.form__label {
+        position: absolute;
+        top: 0;
+        display: block;
+        transition: 0.2s;
+        font-size: 1rem;
+        color: var(--primary);
+        font-weight: 700;
+    }
+    padding-bottom: 6px;
+    font-weight: 700;
+    border-width: 3px;
+    border-image: linear-gradient(to right, var(--primary), var(--secondary), var(--primary));
+    border-image-slice: 1;
+}
+
+.form__field:focus {
+    ~.form__label {
+        position: absolute;
+        top: 0;
+        display: block;
+        transition: 0.2s;
+        font-size: 1rem;
+        color: var(--primary);
+        font-weight: 700;
+    }
+    padding-bottom: 6px;
+    font-weight: 700;
+    border-width: 3px;
+    border-image: linear-gradient(to right, var(--primary), var(--secondary), var(--primary));
+    border-image-slice: 1;
+}
+
+.form__field {
+    &:required,
+    &:invalid {
+        box-shadow: none;
+    }
 }
