--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,6 +20,7 @@
 
 .Splash {
     width: 20em;
+    justify-content: center;
 }
 
 @media only screen and (min-aspect-ratio: 1/1) {
@@ -33,6 +34,7 @@
     }
     .Splash {
         width: 20em;
+        justify-content: center;
     }
 }
 
