--- a/frontend/src/DragTable.css
+++ b/frontend/src/DragTable.css
@@ -2,6 +2,19 @@
 /*******Portrait Mode*******/
 /***************************/
 
+p.rotated {
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  align-content: left;
+  justify-content: left;
+  text-align: left;
+  font-size: 0.8rem;
+  padding: 0;
+  margin-top: 1rem;
+  margin-left: 0;
+  margin-right: 0;
+}
+
 @media only screen and (max-aspect-ratio: 1/1){
   .table-drag-select {
     width: 100%;  
@@ -44,7 +57,7 @@
 
   .viewer-table {
     width: 100%;  
-    table-layout: auto;
+    table-layout: fixed;
     user-select: none;
     margin-left: auto;
     margin-right: auto;
@@ -53,15 +66,15 @@
 
   .viewer-table td {
     text-align: center;
+    border-radius: 5px;
     text-overflow: ellipsis;
     overflow: hidden;
     border: 0.1rem solid transparent;
     background-clip: padding-box;
-    line-height: 2rem;
+    line-height: 1rem;
     padding-left: 0rem;
     padding-right: 0rem;
-    font-size: 1rem;
-    width: 50%;
+    font-size: .6rem;
   }
 
   .viewer-table td.cell-enabled {
@@ -71,6 +84,27 @@
   }
 
   .viewer-table td.cell-disabled {
+  }
+
+  .viewer-table td.cell-disabled-pushed {
+  }
+
+  .viewer-table td.cell-disabled-large-text {
+    font-size:0.75rem;
+  }
+
+  .viewer-table td.cell-disabled-green {
+    font-size:0.75rem;
+    background-color: #00796b;
+  }
+
+  .viewer-table td.cell-disabled-rotated {
+
+  }
+
+  .viewer-table td.cell-disabled-gray {
+    font-size:0.75rem;
+    background-color: #a9a9a9;
   }
 
   .viewer-table td.cell-selected {
@@ -103,7 +137,6 @@
     border: 0.1rem solid transparent;
     border-radius: 10px;
     background-clip: padding-box;
-    width: 2rem;
     line-height: 3rem;
     padding-left: 0rem;
     padding-right: 0rem;
@@ -124,6 +157,63 @@
   }
 
   .table-drag-select td.cell-being-selected {
+    background-color: #3F83D5;
+  }
+
+  .viewer-table {
+    width: 100%;  
+    table-layout: auto;
+    user-select: none;
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: collapse;
+  }
+
+  .viewer-table td {
+    text-align: center;
+    border-radius: 5px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    border: 0.1rem solid transparent;
+    background-clip: padding-box;
+    line-height: 1rem;
+    padding-left: 0rem;
+    padding-right: 0rem;
+    font-size: .6rem;
+  }
+
+  .viewer-table td.cell-enabled {
+    background-color: #DDD;
+    color: black;
+    cursor: cell;
+  }
+
+  .viewer-table td.cell-disabled {
+  }
+
+  .viewer-table td.cell-disabled-large-text {
+    font-size:0.75rem;
+  }
+
+  .viewer-table td.cell-disabled-green {
+    font-size:0.75rem;
+    background-color: #00796b;
+  }
+
+  .viewer-table td.cell-disabled-rotated {
+
+  }
+
+  .viewer-table td.cell-disabled-gray {
+    font-size:0.75rem;
+    background-color: #a9a9a9;
+  }
+
+  .viewer-table td.cell-selected {
+    background-color: #00796b;
+  }
+
+  .viewer-table td.cell-being-selected {
     background-color: #3F83D5;
   }
 }
