--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,11 @@
     --gray: #9b9b9b;
 }
 
+.App {
+  text-align: center;
+}
+
+
 .App-header {
     background-color: var(--primaryColor);
     min-height: 100vh;
@@ -14,13 +19,14 @@
     text-align: center;
     align-items: center;
     justify-content: center;
+    width: 100%;
     font-size: calc(10px + 2vmin);
     color: white;
     font-family: "Helvetica";
 }
 
 .Splash {
-    width: 20em;
+    width: 100%;
     justify-content: center;
     font-family: inherit;
 }
@@ -33,7 +39,7 @@
         flex-direction: column;
         font-size: calc(10px + 2vmin);
         color: white;
-        font-family: inherit;
+        font-family: "Helvetica";
     }
     .Splash {
         width: 20em;
@@ -41,6 +47,7 @@
         font-family: inherit;
     }
 }
+
 
 .selector {
 /*    background: #11998e;
