--- a/frontend/src/CSS/Splash.css
+++ b/frontend/src/CSS/Splash.css
@@ -17,6 +17,14 @@
     margin: 10px; 
 }
 
+.Loading {
+    text-align: center;
+    position: fixed; /* or absolute */
+    top: 50%;
+    left: 50%;
+    margin: augo;
+}
+
 @media only screen and (max-width: 400px) {
     .Splash {
         width: 300px;
